###
# * Poetry Tooling
###

[tool.poetry]
name = "hexproof-docs"
version = "0.1.0"
description = "Automatic static doc site generation for all my projects, powered by MkDocs + Material."
authors = ["Chris <hexproofsystems@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"

[[tool.poetry.packages]]
include = 'hexdoc'

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
mkdocs-material = "^9.5.40"
mkdocs-pymdownx-material-extras = "^2.6"
mkdocs-minify-plugin = "^0.8.0"
mkdocstrings-python = "^1.11.1"
mkdocs-autolinks-plugin = "^0.7.1"
mkdocs-same-dir = "^0.1.3"
mkdocs-include-markdown-plugin = "^6.2.2"
mkdocs-monorepo-plugin = "^1.1.0"
click = "^8.1.7"
typer = "^0.12.5"
omnitils = "^1.4.6"
rich = "^13.9.2"
neoteroi-mkdocs = "^1.1.0"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.20.0"

[tool.poetry.scripts]
hexdoc = 'hexdoc:cli_app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

###
# * Commitizen Tooling
###

[tool.commitizen]
version = "0.1.0"
encoding = "utf-8"
tag_format = "$major.$minor.$patch"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version"
]
